@@ -1,3 +1,14 @@
+2016-04-13  Ben Elliston  <bje@gnu.org>
+
+	* lib/rsh.exp (rsh_exec): Improve verbose message.
+	* lib/ssh.exp (ssh_exec): Likewise.
+	* config/adb.exp: Likewise.
+
+2016-04-13  Ben Elliston  <bje@gnu.org>
+
+	* runtest.exp: Improve --version (-v) output.
+	* testsuite/runtest.all/options.exp: Update test case.
+
 2016-04-13  Christophe Lyon  <christophe.lyon@linaro.org>
 
 	* lib/rsh.exp (rsh_exec): Handle regexp return status.
